fixed z-index/lineheight on roaster title

--- a/site/pdxroasters/static/sass/screen.scss
+++ b/site/pdxroasters/static/sass/screen.scss
@@ -334,12 +334,12 @@ body {
   }
 }
 
-.banner-title{
+.banner-title {
   position: relative;
   width: 100%;
   padding: 10% 0 10% 0;
   display: block;
-  z-index: 3;
+  z-index: 2;
   margin-top:3em;
 }
 
@@ -347,6 +347,8 @@ body {
   color: $white;
   font-size: 72px;
   text-align:center;
+  line-height:1.25em;
+  margin-bottom:0.5em;
   @include respond-to($phone, $phone-wide){
     font-size:24px;
   }
